# control-mapper

./: .env.example  .gitignore  README.md  app.py  license  license.md  my_first_crosswalk.xlsx  pyproject.toml  requirements.txt
data/frameworks/: iso_27001_2022_annexa_subset.json  nist_800-53_subset.json  soc2_tsc_subset.json
data/sample_outputs/: crosswalk_sample.csv  crosswalk_sample.xlsx
data/sample_policies/: sample_policy.md
eval/: evaluate.py  stub_client.py
eval/gold/: ISO_IEC_27001_2022.json  NIST_SP_800-53_R5.json  SOC2_TSC_2017.json
src/control_mapper/: __init__.py  analysis.py  cli.py  crosswalk.py  export.py  frameworks.py  mapper.py  models.py
tests/: test_control_mapper.py
